--- a/client/src/components/SignIn/index.css
+++ b/client/src/components/SignIn/index.css
@@ -1,12 +1,15 @@
-/* #emailLabel, #passwordLabel{
-    font-size: 15px;
-    color: lightgrey;
-    width: 100px;
-    margin: 2px;
-    padding: 2px;
-  
-};
-#formSubmit{
-    width:300px;
-} */
+
+.input-group {  
+    font-family: 'Gugi', cursive;
+    font-size: 14px;
+}
+
+.form-control {
+    background-color: gray;
+    color: black;
+}
+
+button {
+    font-family: 'Gugi', cursive;
+}
 
